--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ body{
 	font-size: 18px;
 	border: none;
 	outline: none;
-	background-color:teal;
+	background-color:red;
 	color: white;
 	cursor: pointer;
 	padding: 15px;
@@ -40,7 +40,7 @@ body{
   }
   
   #myBtn:hover {
-	background-color: #555;
+	background-color: teal;
   }
 /*------------------------footer--------------------*/
 .footer
@@ -121,24 +121,6 @@ body{
 	height:200px;
 	width: 400px;
 }
-/* .to-top
-{
-	background: white;
-	position: fixed;
-	bottom: 16px;
-	right: 32px;
-	width: 50px;
-	height: 50px;
-	border-radius: 50%;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	font-size: 32px;
-	color: black;
-	text-decoration-style: none;
-	pointer-events: none;
-	transition: all .4s;
-} */
 /* ---------top navbar------- */
 .navber {
 	width: 100%;
@@ -202,3 +184,43 @@ body{
 	padding: 20px;
   }
   /* end contact from */ 
+  /*---------- bugettbox-------------- */
+  .content {
+    max-width: 1160px;
+    margin: 0 auto;
+}
+
+.gallery:after {
+    content: '';
+    display: block;
+    height: 2px;
+    margin: .5em 0 1.4em;
+    background-image: -webkit-linear-gradient(left, rgba(0, 0, 0, 0) 0%, rgba(77,77,77,1) 50%, rgba(0, 0, 0, 0) 100%);
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0) 0%, rgba(77,77,77,1) 50%, rgba(0, 0, 0, 0) 100%);
+}
+
+.gallery img {
+    height: 100%;
+}
+
+.gallery a {
+    width: 240px;
+    height: 180px;
+    display: inline-block;
+    overflow: hidden;
+    margin: 8px 10px;
+    box-shadow: 0 0 4px -1px #000;
+}
+
+.ribbon > img {
+    position: absolute;
+    top: 0;
+    right: 0;
+    border: 0;
+}
+
+@media (max-width: 768px) {
+    .sm-hidden {
+        display: none;
+    }
+}
