--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,99 @@ body{
   #myBtn:hover {
 	background-color: teal;
   }
+  /* ------------------------------ */
+
+  .w3-bar-block .w3-bar-item {
+	padding: 16px;
+	font-weight: bold;
+  }
+  body {
+	font-family: Arial;
+	margin: 0;
+  }
+  .container1 .mySlides img
+  {
+	  height: 550px;
+  }
+  /* Style the search box */
+  #mySearch {
+	width: 100%;
+	font-size: 15px;
+	padding: 11px;
+	border: 1px solid #ddd;
+  }
+  
+  /* Style the navigation menu inside the left column */
+  #myMenu {
+	list-style-type: none;
+	padding: 0;
+	margin: 0;
+  }
+  
+  #myMenu li a {
+	padding: 12px;
+	text-decoration: none;
+	color: black;
+	display: block
+  }
+  
+  #myMenu li a:hover {
+	background-color: teal;
+	color: white;
+  }
+  .img-st{
+	width: 100%;
+	height: 400px;
+  }
+  .image-top img
+  {
+	  width:100%;
+  }
+  .image-top img:hover
+  {
+	  transform:scale(1.1);
+	  transition:1s;
+  }
+  .like-view
+  {
+	  display:block;
+	  opacity:0;
+	  position:absolute;
+	  margin-left:0;
+	  width:70px;
+	margin-bottom:20%;
+	transform: translateY(-100%);
+  }
+  .like-view .fa
+  {
+	  cursor:pointer;
+	  background-color: red;
+	  color:#fff;
+	  height:25px;
+	  width:25px;
+	  font-size:15px;
+	  padding:5px;
+	  margin-top:3%;
+	  margin-bottom:7%;
+	  
+  }
+  .like-view .btn-secondary
+  {
+	  background:none!important;
+	  border:none!important;
+	  box-shadow:none!important;
+  }
+  .image-top:hover .like-view
+  {
+	  opacity:1;
+	  margin-left:5%;
+	  transition:1s;
+  }
+  .img-st{
+	max-width: 100%;
+	height: 480px;
+  }
+
 /*------------------------footer--------------------*/
 .footer
 {
@@ -193,7 +286,8 @@ body{
   /*---------- bugettbox-------------- */
   .content {
     max-width: 1160px;
-    margin: 0 auto;
+	margin: 0 auto;
+	margin-left: 8px;
 }
 
 .gallery:after {
@@ -214,7 +308,7 @@ body{
     height: 250px;
     display: inline-block;
     overflow: hidden;
-    margin: 6px 8px;
+    margin: 4px 6px;
     box-shadow: 0 0 4px -1px #000;
 }
 
