--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap');
+*{
+	margin: 0;
+	padding: 0;
+}
 body{
 	scroll-behavior: smooth;
 }
@@ -289,7 +294,6 @@ body{
 	margin: 0 auto;
 	margin-left: 8px;
 }
-
 .gallery:after {
     content: '';
     display: block;
@@ -298,7 +302,6 @@ body{
     background-image: -webkit-linear-gradient(left, rgba(0, 0, 0, 0) 0%, rgba(77,77,77,1) 50%, rgba(0, 0, 0, 0) 100%);
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0) 0%, rgba(77,77,77,1) 50%, rgba(0, 0, 0, 0) 100%);
 }
-
 .gallery img {
     height: 100%;
 }
