--- a/css/style.css
+++ b/css/style.css
@@ -90,10 +90,17 @@ body{
   .img-st{
 	width: 100%;
 	height: 400px;
+	margin-top: 2px;
   }
   .image-top img
   {
 	  width:100%;
+	  
+  }
+  .image-top a
+  {
+	 margin: 2px 2px;
+	  
   }
   .image-top img:hover
   {
@@ -219,41 +226,38 @@ body{
 	height:200px;
 	width: 400px;
 }
+.image-topen img{
+	height: 200px;
+	width: 400px;
+}
 /* ---------top navbar------- */
 .navber {
 	width: 100%;
 	overflow: hidden;
   }
   
-  .navber a {
-	float: right;
+.navber a {
+	float:right;
 	padding: 20px;
 	color: white;
 	text-decoration: none;
 	font-size: 17px;
   }
-  .navber a:hover {
+.navber a:hover {
 	color: #000;
 	text-decoration: none;
   }
-  @media screen and (max-width: 500px) {
+@media screen and (max-width: 700px) {
 	.navber a {
-	  float: none;
 	  display: block;
 	}
-	.menu{
+	.navber a{
 		float:none;
 		display: block;
-		margin-left: 10px;
+		
 	  }
   }
   /* ------End top navbar--------- */
-  /* ------------image slider---------- */
-  .img-st{
-	max-width: 100%;
-	height: 480px;
-  }
-
   /* -----------contact from------------ */
   input[type=text], select, textarea {
 	width: 100%;
@@ -292,26 +296,27 @@ body{
   .content {
     max-width: 1160px;
 	margin: 0 auto;
-	margin-left: 8px;
+	margin-left: 10px;
+	margin: 2px 2px;
 }
 .gallery:after {
     content: '';
     display: block;
-    height: 2px;
     margin: .5em 0 1.4em;
     background-image: -webkit-linear-gradient(left, rgba(0, 0, 0, 0) 0%, rgba(77,77,77,1) 50%, rgba(0, 0, 0, 0) 100%);
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0) 0%, rgba(77,77,77,1) 50%, rgba(0, 0, 0, 0) 100%);
 }
 .gallery img {
-    height: 100%;
+	height: 100%;
+	
 }
 
 .gallery a {
-    width: 340px;
-    height: 250px;
+    width: 300px;
+    height: 230px;
     display: inline-block;
     overflow: hidden;
-    margin: 4px 6px;
+    margin: 2px 2px;
     box-shadow: 0 0 4px -1px #000;
 }
 
@@ -321,35 +326,22 @@ body{
     right: 0;
     border: 0;
 }
-
-@media (max-width: 700px) {
-    .sm-hidden {
-        display: none;
-	}
-	.content{
-		transform: translateX(50px);
-		margin-top: -30%;
+/* @media(max-width:600px){
+	.gallery a{
+		width: 400px;
+		height: 220px;
 	}
 }
-@media (max-width: 580px) {
-    .sm-hidden {
-        display: none;
+@media(max-width:400px){
+	.gallery a{
+		width: auto;
+		height:auto;
+		margin: 15px auto;
 	}
-	.content{
-		transform: translateX(40px);
-		margin-top: -15%;
+} */
+/* @media(max-width:300px){
+	.gallery a{
+		width: 180px auto;
+		height: 150px auto;
 	}
-	
-}
-@media (max-width: 408px) {
-    .sm-hidden {
-        display: none;
-	}
-	.content{
-		transform: translateX(30px);
-		margin-top: -50%;
-	}
-	.img{
-		width: 250px;
-	}
-}
+} */
