--- a/css/login.css
+++ b/css/login.css
@@ -10,7 +10,7 @@
   background: #fff;
   padding: 30px;
   border-radius: 5px;
-  box-shadow: 0px 15px 20px rgba(0,0,0,0.1);
+  box-shadow: 0px 20px 20px rgba(0,0,0,0.1);
   justify-content: center;
   text-align: center;
   margin-left: 30%;
@@ -34,19 +34,19 @@
   height: 50px;
   width: 100%;
   overflow: hidden;
-  margin: 30px 0 10px 0;
+  margin: 20px 0 5px 0;
   justify-content: space-between;
   border: 1px solid lightgrey;
   border-radius: 5px;
 }
 .slide-controls .slide{
-  height: 100%;
+  height: 110%;
   width: 100%;
   color: #fff;
-  font-size: 18px;
+  font-size: 17px;
   font-weight: 500;
   text-align: center;
-  line-height: 48px;
+  line-height: 50px;
   cursor: pointer;
   z-index: 1;
   transition: all 0.6s ease;
@@ -57,7 +57,7 @@
 .slide-controls .slider-tab{
   position: absolute;
   height: 100%;
-  width: 50%;
+  width: 60%;
   left: 0;
   z-index: 0;
   border-radius: 5px;
@@ -84,6 +84,7 @@ input[type="radio"]{
 #login:checked ~ label.login{
   cursor: default;
   user-select: none;
+  text-align: center;
 }
 .wrapper .form-container{
   width: 100%;
@@ -110,7 +111,7 @@ input[type="radio"]{
   border-radius: 5px;
   border: 1px solid lightgrey;
   border-bottom-width: 2px;
-  font-size: 17px;
+  font-size: 15px;
   transition: all 0.3s ease;
 }
 .form-inner form .field input:focus{
@@ -148,8 +149,8 @@ form .btn{
   overflow: hidden;
 }
 form .btn .btn-layer{
-  height: 100%;
-  width: 300%;
+  height: 120%;
+  width: 310%;
   position: absolute;
   left: -100%;
   background: -webkit-linear-gradient(right, #a445b2, #fa4299, #a445b2, #fa4299);
@@ -172,4 +173,9 @@ form .btn input[type="submit"]{
   font-size: 20px;
   font-weight: 500;
   cursor: pointer;
+}
+@media (max-width:600px){
+  .wrapper{
+    transform: translateX(-20% );
+  }
 }
