--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,10 @@
 body{
 	scroll-behavior: smooth;
 }
-
+.logo{
+	height: 50px;
+	width: 100%;
+}
 #myMenu li a:hover {
 	background-color: teal;
 	color: white;
