--- a/css/style.css
+++ b/css/style.css
@@ -393,3 +393,21 @@ body{
 		height: 150px auto;
 	}
 } */
+
+/* -------clock in slider--------- */
+.format{
+	color: aquamarine;
+	font-size: 20px;
+	margin: 20px 0;
+  }
+  .format button{
+	display: inline-block;
+	border: none;
+	outline: none;
+	font-size: 18px;
+	padding: 8px 15px;
+	font-family: 'Orbitron';
+	border-radius: 4px;
+	cursor: pointer;
+	margin: 8px;
+  }
