--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,7 @@ body{
 .side-nav ul li:hover{
     background-color: teal;
 }
+/* -------------Go to top---------- */
 #myBtn {
 	display: none;
 	position: fixed;
@@ -72,7 +73,12 @@ body{
   #myBtn:hover {
 	background-color: teal;
   }
-
+@media(max-width:750px){
+	#myBtn{
+		bottom: 10px;
+	    right: 9px;
+	}
+}
   /* ----------------------------- */
   .menu{
 	  margin-top: 8px !important;
@@ -87,7 +93,7 @@ body{
   {
 	  height: 550px;
   }
-  /* Style the search box */
+  /*--------- Style the search box----------- */
   #mySearch {
 	width: 100%;
 	font-size: 15px;
@@ -113,6 +119,14 @@ body{
 	background-color: teal;
 	color: white;
   }
+  /* ----------------End side menu------------ */
+
+  /* ---------slider style-------------------- */
+  .slider .img-st img{
+	height: 450px;
+	width: 100%;
+  }
+ /* ----------End slider style--------------- */
   .image-top img
   {
 	  width:100%;
@@ -163,11 +177,6 @@ body{
 	  margin-left:5%;
 	  transition:1s;
   }
-  .slider .img-st img{
-	height: 450px;
-	width: 100%;
-  }
-
 /*------------------------footer--------------------*/
 .footer
 {
@@ -251,7 +260,7 @@ body{
 .nav-top{
 	width: 100%;
 	display: inline-flex;
-	padding: 12px;
+	padding: 10px;
 	margin-bottom: 0;
 	background-color: rgb(247, 250, 250);
 	position: sticky;
@@ -259,7 +268,7 @@ body{
 }
 .nav-top li{
 	list-style-type: none;
-	padding: 10px 15px;
+	padding: 10px 12px;
 	color: #000;
 	font-size: 18px;
 	font-weight: bold;
@@ -374,35 +383,15 @@ body{
     right: 0;
     border: 0;
 }
-/* @media(max-width:600px){
-	.gallery a{
-		width: 400px;
-		height: 220px;
-	}
-}
-@media(max-width:400px){
-	.gallery a{
-		width: auto;
-		height:auto;
-		margin: 15px auto;
-	}
-} */
-/* @media(max-width:300px){
-	.gallery a{
-		width: 180px auto;
-		height: 150px auto;
-	}
-} */
-
 /* -------clock in slider--------- */
 .clock {
 	border-radius: 10px;
 	color: #fff;
-	font-family: 'Orbitron', sans-serif;
+	font-family: 'Orbitron', sans-serif !important ;
   }
 .format{
 	color: aquamarine;
-	font-size: 30px;
+	font-size: 30px !important;
 	margin: 20px 0;
 	font-family: 'Orbitron', sans-serif;
 	font-weight: bold;
