--- a/css/style.css
+++ b/css/style.css
@@ -28,11 +28,69 @@ body{
 	scroll-behavior: smooth;
 	
 }
+/* ---------top navbar------- */
+.nav-top{
+	width: 100%;
+	display: inline-flex;
+	background-color: rgb(247, 250, 250);
+	overflow: hidden;	
+}
+.nav-top li{
+	list-style-type: none;
+	padding: 18px 10px;
+	color: #000;
+	font-size: 18px;
+	font-weight: bold;
+	
+}
+.nav-top li a{
+	text-decoration: none;
+}
+
+.nav-top li:hover a{
+	color: red;
+}
+.nav .nav-item{
+	float: left !important;
+}
+@media(max-width:700px){
+	.nav-top{
+		font-size: auto;
+		display: inline-flex;
+		margin-top: 0;
+		
+	}
+	.nav-top li{
+		margin-left: 0;
+	}
+	.nav-top li a{
+		padding: 1px;
+		margin-top: 8px;
+		
+	}
+}
+@media(max-width:482px){
+	.nav-top{
+		font-size: auto;
+		display: inline-block;
+		margin-top: 0;
+		
+	}
+	.nav-top li{
+		margin-left: 0;
+	}
+	.nav-top li a{
+		padding: 1px;
+		margin-top: 8px;
+		
+	}
+}
+/* -----------Side menu ber------------------ */
 .logo{
 	height: 50px;
 	width: 100%;
 }
-#myMenu li a:hover {
+#myMenu li a:hover #fa{
 	background-color: teal;
 	color: white;
   }
@@ -53,6 +111,12 @@ body{
 .side-nav ul li:hover{
     background-color: teal;
 }
+#fa{
+	font-size: 20px;
+	font-weight: bold;
+	padding: 2px 5px;
+	color:teal;
+}
 /* -------------Go to top---------- */
 #myBtn {
 	display: none;
@@ -63,15 +127,14 @@ body{
 	font-size: 18px;
 	border: none;
 	outline: none;
-	background-color:red;
+	background-color:teal;
 	color: white;
 	cursor: pointer;
 	padding: 15px;
 	border-radius: 4px;
   }
-  
-  #myBtn:hover {
-	background-color: teal;
+  #myBtn:hover{
+	  background-color: red;
   }
 @media(max-width:750px){
 	#myBtn{
@@ -80,9 +143,7 @@ body{
 	}
 }
   /* ----------------------------- */
-  .menu{
-	  margin-top: 8px !important;
-  }
+  
   /* ------------------------------ */
 
   .w3-bar-block .w3-bar-item {
@@ -165,6 +226,7 @@ body{
 	  margin-bottom:7%;
 	  
   }
+  
   .like-view .btn-secondary
   {
 	  background:none!important;
@@ -256,62 +318,7 @@ body{
 	height:200px;
 	width: 400px;
 }
-/* ---------top navbar------- */
-.nav-top{
-	width: 100%;
-	display: inline-flex;
-	padding: 10px;
-	margin-bottom: 0;
-	background-color: rgb(247, 250, 250);
-	position: sticky;
-	
-}
-.nav-top li{
-	list-style-type: none;
-	padding: 10px 12px;
-	color: #000;
-	font-size: 18px;
-	font-weight: bold;
-	
-}
-.nav-top li a{
-	text-decoration: none;
-}
-.nav-top li a:hover{
-	color: red;
-}
-@media(max-width:700px){
-	.nav-top{
-		font-size: auto;
-		display: inline-flex;
-		margin-top: 0;
-		
-	}
-	.nav-top li{
-		margin-left: 0;
-	}
-	.nav-top li a{
-		padding: 1px;
-		margin-top: 8px;
-		
-	}
-}
-@media(max-width:482px){
-	.nav-top{
-		font-size: auto;
-		display: inline-block;
-		margin-top: 0;
-		
-	}
-	.nav-top li{
-		margin-left: 0;
-	}
-	.nav-top li a{
-		padding: 1px;
-		margin-top: 8px;
-		
-	}
-}
+
 
 
   /* ------End top navbar--------- */
@@ -406,4 +413,8 @@ body{
 	border-radius: 4px;
 	cursor: pointer;
 	margin: 8px;
+  }
+  .format button:hover{
+	  background-color: red;
+	  color: white;
   }
