--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,27 @@
 	margin: 0;
 	padding: 0;
 }
+/* width */
+::-webkit-scrollbar {
+	width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+	box-shadow: inset 0 0 5px grey; 
+	border-radius: 10px;
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+	background: teal; 
+	border-radius: 10px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+	background: #b30000; 
+  }
 html{
 	margin-left: 6%;
 	margin-right: 6%;
@@ -87,7 +108,7 @@ body{
 }
 /* -----------Side menu ber------------------ */
 .logo{
-	height: 50px;
+	height: 52px;
 	width: 100%;
 }
 #myMenu li a:hover #fa{
