--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,20 @@
 	margin: 0;
 	padding: 0;
 }
-/* width */
+h1{
+	font-size: 20px !important;
+	font-weight: bold;
+	color: #000;
+}
+H1{
+	font-size: 20px !important;
+	font-weight: bold;
+	color: #000;
+}
+p{
+	font-size: 12px;
+	color: #000;
+}
 ::-webkit-scrollbar {
   width: 10px;
 }
@@ -20,15 +33,6 @@
   border-radius: 10px;
 }
 
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  background: #b30000; 
-}
-html{
-	margin-left: 6%;
-	margin-right: 6%;
-	background-color: gray;
-}
 @media(max-width:1250px){
 	html{
 		margin-left: 0;
@@ -50,26 +54,30 @@ body{
 	
 }
 /* ---------top navbar------- */
+.nav{
+	border: 0px solid rgb(199, 197, 197);
+	border-bottom-width: 2px;
+}
 .nav-top{
 	width: 100%;
 	display: inline-flex;
-	background-color: rgb(247, 250, 250);
-	overflow: hidden;	
+	background-color:ghostwhite;
+	overflow: hidden;
 }
 .nav-top li{
 	list-style-type: none;
-	padding: 18px 10px;
 	color: #000;
-	font-size: 18px;
+	font-size: 15px;
 	font-weight: bold;
-	
+	padding: 15px 10px;
 }
 .nav-top li a{
 	text-decoration: none;
 }
 
-.nav-top li:hover a{
-	color: red;
+.nav-top li:hover{
+	background-color: teal;
+	color: white;
 }
 .nav .nav-item{
 	float: left !important;
@@ -108,9 +116,15 @@ body{
 }
 /* -----------Side menu ber------------------ */
 .logo{
-	height: 50px;
+	height: 36px;
 	width: 100%;
 }
+#myMenu{
+	font-size: 15px !important;
+	font-weight: bold;
+	color: lightgray !important;
+}
+
 #myMenu li a:hover #fa{
 	background-color: teal;
 	color: white;
@@ -127,7 +141,8 @@ body{
 .side-nav ul li a{
     text-decoration: none;
     padding: 0px 6px;
-    position: relative;
+	position: relative;
+	color: lightgray !important;
 }
 .side-nav ul li:hover{
     background-color: teal;
@@ -143,7 +158,7 @@ body{
 	display: none;
 	position: fixed;
 	bottom: 20px;
-	right: 80px;
+	right: 30px;
 	z-index: 99;
 	font-size: 18px;
 	border: none;
@@ -166,7 +181,10 @@ body{
   /* ----------------------------- */
   
   /* ------------------------------ */
-
+.category{
+	border: 0px solid rgb(2, 104, 104) !important;
+	border-bottom-width: 2px !important;
+}
   .w3-bar-block .w3-bar-item {
 	padding: 16px;
 	font-weight: bold;
@@ -191,7 +209,7 @@ body{
   }
   
   #myMenu li a {
-	padding: 12px;
+	padding: 8px;
 	text-decoration: none;
 	color: black;
 	display: block
@@ -204,15 +222,19 @@ body{
   /* ----------------End side menu------------ */
 
   /* ---------slider style-------------------- */
+  .nav-slide{
+	transform: translateY(-2.6px);
+  }
   .slider .img-st img{
 	height: 450px;
 	width: 100%;
+	
   }
  /* ----------End slider style--------------- */
   .image-top img
   {
 	  width:100%;
-	  
+	  margin-top: 0px;
   }
   .image-top a
   {
@@ -221,8 +243,7 @@ body{
   }
   .image-top img:hover
   {
-	  transform:scale(1.1);
-	  transition:1s;
+	  opacity: 0.7;
   }
   .like-view
   {
@@ -230,7 +251,7 @@ body{
 	  opacity:0;
 	  position:absolute;
 	  margin-left:0;
-	  width:70px;
+	  width:80px;
 	  margin-bottom:20%;
 	  transform: translateY(-100%);
   }
